data/derived/comb/progs/unify/prog6341.ml.out
Characters 63-64:
  let base = f 1 in
               ^
Error: This expression has type int but an expression was expected of type
         'a -> 'b
